style.css
/* import */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');

/* general page style */
:root {
  --primary-color: #000;
  --white: #f5f5f5;
  --neutral-1-color: #ececec;
  --neutral-2-color: #cecece;
  --neutral-3-color: #bebebe;
  --light-shadow-color: rgba(0,0,0,0.2);
  --dark-shadow-color: rgba(0,0,0,0.3);

  --skate-log-accent: #FBDFD0;
  --ez-pharm-accent: #DAECF6;
  --podsie-accent: #DCF0E7;
  --tv-paint-accent: #F0DBD4;
  --workplace-wellness-accent: #E5EBF6;
  --praxis-accent: #F3EBF6;
  --yellow-accent: #FAECC7;

  overflow-x: hidden;
}

*, *::before, *::after {
  box-sizing: border-box;
  font-family: 'League Spartan', sans-serif;
  color: var(--primary-color)
}

br {
  margin-bottom: 1rem;
}

body {
  padding: 0rem;
  margin: 0rem;
  background-color: var(--white);
  position: relative;
  /* overflow-x: hidden; */
}

img {
  object-fit: cover;
}

h1, h2, h3, h4, h5 {
  font-family: 'League Spartan', sans-serif;
  margin: 0rem;
}

h5 {
  font-size: 1.25rem;
  font-weight: 100;
}

h4 {
  font-size: 1.5rem;
  font-weight: 500;
}

h3 {
  font-size: 2rem;
  font-weight: 300;
}

h2 {
  font-size: 3rem;
  font-weight: 700;
}

h1 {
  font-size: 4rem;
  font-weight: 900;
  margin-bottom: 1rem;
}

p, a {
  font-size: 1.15rem;
  line-height: 200%;
  margin-top: 1rem;
  margin-bottom: 0rem;
}

li {
  font-size: 1.15rem;
  line-height: 150%;
}

.nav-bar, footer {
  display: flex;
  justify-content: space-between;
  padding: 1rem 2rem;
  width: 100%;
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  padding: 2rem 2rem;
}

.nav-toggle {
  font-size: 2rem;
  cursor: pointer;
  display: none;
  padding: 0rem;
  margin: 0rem;
  height: 2rem;
  width: 2rem;
  border: none;
  background: transparent;
  backdrop-filter: none;
  -webkit-backdrop-filter: none;
  box-shadow: none;
  position: relative;
  border-radius: 0;
  overflow-x: visible;
  /* border: 2px solid rgba(255,0,0,0.5); */
}

.nav-toggle * {
  background: black;
  display: block;
  position: absolute;
  transform: rotate(0deg);
  transition: 0.2 ease all;
  border-radius: 2px;
  height: 2px;
  width: 30px;
  transition: 0.3s ease transform;
  border-radius: 4px;
}

.nav-toggle > div:nth-child(1) {
  top: 8px;
}
.nav-toggle > div:nth-child(2) {
  top: calc(50% - 1px);
}
.nav-toggle > div:nth-child(3) {
  bottom: 8px;
}

.nav-toggle[aria-expanded="true"] > div:nth-child(1) {
  transform-origin: 50% 50%;
  transform: rotate(45deg) translateY(10px);
  width: 40px;
}
.nav-toggle[aria-expanded="true"] > div:nth-child(2) {
  opacity: 0;
}
.nav-toggle[aria-expanded="true"] > div:nth-child(3) {
  transform-origin: 50% 50%;
  transform: rotate(-45deg) translateY(-10px);
  width: 40px;
}

.primary-navigation {
  list-style: none;
  margin: 0;
  display: flex;
  gap: 2rem;
  justify-content: flex-end;
  width: 100%;
  align-items: center;
}

.nav-bar a, .nav-dropdown {
  text-decoration: none;
  color: black;
  transition: all ease-out 250ms;
  font-size: 1rem;
  line-height: 150%;
  margin-top: 0rem;
  text-transform: uppercase;
  align-items: center;
  position: relative;
}

.nav-bar a:not(.icon) {
  text-decoration: none;
  color: black;
  transition: all ease-out 250ms;
  font-size: 1rem;
  text-transform: uppercase;
  align-items: center;
  position: relative;
}

.nav-bar li > a:not(.icon)::after, .nav-dropdown-hover-item::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 1px;
  border-radius: 2px;
  background-color: black;
  bottom: 0;
  left: 0;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform .3s ease-in-out;
}

.nav-bar li > a:not(.icon):hover::after, .nav-dropdown-hover-item:hover::after {
  transform-origin: left;
  transform: scaleX(1);
}

.nav-dropdown-content {
  display: none;
}

.nav-dropdown:hover .nav-dropdown-content {
  box-shadow: 0rem 0rem 12px 4px rgb(0,0,0,0.2);
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  display: block;
  z-index: 100;
  background-color: var(--white);
  width: max-content;
}



.nav-dropdown-content a {
  margin-top: 0rem;
  padding: 1rem;
  display: block;
}

.nav-dropdown-content a:hover {
  background-color: var(--neutral-1-color);
}


.icon {
  position: relative;
  cursor: pointer;
}

.icon img {
  height: 2rem;
  width: 2rem;
}

footer img {
  max-width: 2rem;
  max-height: 2rem;
}

footer a {
  text-decoration: none;
}

button {
  background-color: rgba(255,255,255,0.8);
  backdrop-filter: blur(16px);
  -webkit-backdrop-filter: blur(16px);
  border: 1px solid black;
  padding: 1rem 2rem;
  font-size: 1rem;
  border-radius: 32px;
  cursor: pointer;
  position: relative;
  overflow: hidden;
  box-shadow: 0 0 1rem 0rem rgb(0,0,0,0.1);
  transition: box-shadow 0.3s ease;
}

.resize-animation-stopper * {
  animation: none !important;
  transition: none !important;
}

/* home page style */

.intro-hover {
  background: linear-gradient(
    to right, 
    #7953cd 20%,
    #00affa 30%,
    #0190cd 70%,
    #764ada 80%
  );
  -webkit-background-clip: text;
  background-clip:text;
  -webkit-text-fill-color: transparent;
  text-fill-color: transparent;
  background-size: 500% auto;
  animation: color-change 5s ease-in-out infinite alternate;
}

@keyframes color-change {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 100% 50%;
  }
}

#hero .nav-bar {
  position: absolute;
}

.introduction.container {
  position: absolute;
  /* top: 45%; */
  bottom: 10%;
  left: 60%;
  padding: 0rem 2rem;
  display: flex;
  justify-content: flex-end;
}

.introduction.container > * {
  max-width: 800px;
  position: relative;
}

.introduction > * {
  margin-bottom: 0rem;
  /* background: white; */
  /* text-shadow: 4px 4px rgba(255, 255, 255, 1); */
}

.introduction h1 {
  font-size: calc(12px + 3vw);
}
.introduction h2 {
  font-size: calc(12px + 2vw);
}
/* ... */

